# FastETL

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/db/: models.py  mongo_connection.py  populate.py  postgree_connection.py
app/service/: extract.py  load.py  pipeline.py  transform.py
app/utils/: logging.py
